<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ordormenback"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/overskrift"
        style="@style/title"
        android:text="@string/app_name"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/feilmelding"
        style="@style/tilbakemeldinger"
        android:text="@string/feilmelding0"
        android:layout_marginStart="0dp"
        android:layout_marginTop="280dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonDelete"
        style="@style/delete"
        android:text="@string/slett"
        android:layout_marginStart="0dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonCheck"
        style="@style/prov"
        android:text="@string/prov"
        android:layout_marginStart="0dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/dineOrd"
        style="@style/dineOrd"
        android:text="@string/dineOrd"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-800dp"
        app:layout_constraintBottom_toBottomOf="@id/fasiten"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonHint"
        style="@style/questionMark"
        android:layout_marginStart="290dp"
        android:layout_marginTop="-460dp"
        android:layout_marginBottom="33dp"
        android:text="@string/sprs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fasiten"
        style="@style/fasit"
        android:layout_marginStart="0dp"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/fasit" />

    <TextView
        android:id="@+id/inputText"
        style="@style/finnOrd"
        android:hint="@string/finnOrd"
        android:inputType="textPersonName"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/buttonB"
        style="@style/bokstavenB"
        android:text="@string/b"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/fasiten"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="-55dp"
        android:layout_marginTop="-410dp"
        app:layout_constraintStart_toStartOf="@id/buttonDelete"
       />

    <Button
        android:id="@+id/buttonJ"
        style="@style/bokstavenJ"
        android:text="@string/j"
        android:layout_marginStart="210dp"
        android:layout_marginTop="-65dp"
        app:layout_constraintStart_toStartOf="@id/overskrift"
        app:layout_constraintTop_toTopOf="@id/buttonO"/>

    <Button
        android:id="@+id/buttonP"
        style="@style/bokstavenP"
        android:text="@string/p"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="@id/overskrift"
        app:layout_constraintStart_toStartOf="@id/buttonE" />

    <Button
        android:id="@+id/buttonO"
        style="@style/bokstavenO"
        android:text="@string/o"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toBottomOf="@id/buttonP"
        app:layout_constraintStart_toStartOf="@id/buttonP"
        app:layout_constraintTop_toTopOf="@id/buttonP"/>

    <Button
        android:id="@+id/buttonE"
        style="@style/bokstavenE"
        android:text="@string/e"
        android:layout_marginStart="55dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="@id/buttonM"
        app:layout_constraintTop_toTopOf="@id/buttonP"/>

    <Button
        android:id="@+id/buttonD"
        style="@style/bokstavenD"
        android:text="@string/d"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@id/buttonM"
        app:layout_constraintStart_toStartOf="@id/buttonB" />


    <Button
        android:id="@+id/buttonM"
        style="@style/bokstavenM"
        android:text="@string/m"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-65dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toStartOf="@id/buttonD"
        app:layout_constraintTop_toTopOf="@id/buttonD"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Constraints
        android:id="@+id/constraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/flagg"
        android:layout_marginBottom="-30dp"
        android:layout_marginRight="-3dp"
        android:src="@drawable/flagg"
        app:layout_constraintBottom_toBottomOf="@id/sprak"
        app:layout_constraintLeft_toLeftOf="@id/fasiten"
        app:layout_constraintEnd_toEndOf="@id/sprak" />

    <TextView
        android:id="@+id/sprak"
        style="@style/sprak"
        android:text="@string/language"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@id/fasiten"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ormen"
        style="@style/ormen"
        android:src="@drawable/ormen"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/antallOrd"
        style="@style/antallOrd"
        android:text="@string/antallOrd"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toBottomOf="@id/overskrift"
        app:layout_constraintStart_toStartOf="@id/overskrift" />

    <ListView
        android:id="@+id/ordFunnet"
        android:layout_width="200dp"
        android:layout_height="61dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>